@@ -32,7 +32,7 @@ The nodes in the cluster will attempt to access the resources available under
 the URI and import the data.
 
 The file(s) must contain one JSON formatted row per line and have to be encoded
-using UTF-8.
+using UTF-8. Empty lines are skipped.
 
 For examples see: :ref:`importing_data`.
 
