@@ -64,14 +64,17 @@ public class FileReadingCollectorTest extends CrateUnitTest {
 
     private static File tmpFile;
     private static File tmpFileGz;
+    private static File tmpFileEmptyLine;
     private FileCollectInputSymbolVisitor inputSymbolVisitor;
 
     @BeforeClass
     public static void setUpClass() throws Exception {
         Path copy_from = Files.createTempDirectory("copy_from");
         Path copy_from_gz = Files.createTempDirectory("copy_from_gz");
+        Path copy_from_empty = Files.createTempDirectory("copy_from_empty");
         tmpFileGz = File.createTempFile("fileReadingCollector", ".json.gz", copy_from_gz.toFile());
         tmpFile = File.createTempFile("fileReadingCollector", ".json", copy_from.toFile());
+        tmpFileEmptyLine = File.createTempFile("emptyLine", ".json", copy_from_empty.toFile());
         try (BufferedWriter writer =
                      new BufferedWriter(new OutputStreamWriter(new GZIPOutputStream(new FileOutputStream(tmpFileGz))))) {
             writer.write("{\"name\": \"Arthur\", \"id\": 4, \"details\": {\"age\": 38}}\n");
@@ -79,6 +82,11 @@ public class FileReadingCollectorTest extends CrateUnitTest {
         }
         try (FileWriter writer = new FileWriter(tmpFile)) {
             writer.write("{\"name\": \"Arthur\", \"id\": 4, \"details\": {\"age\": 38}}\n");
+            writer.write("{\"id\": 5, \"name\": \"Trillian\", \"details\": {\"age\": 33}}\n");
+        }
+        try (FileWriter writer = new FileWriter(tmpFileEmptyLine)) {
+            writer.write("{\"name\": \"Arthur\", \"id\": 4, \"details\": {\"age\": 38}}\n");
+            writer.write("\n");
             writer.write("{\"id\": 5, \"name\": \"Trillian\", \"details\": {\"age\": 33}}\n");
         }
     }
@@ -97,6 +105,7 @@ public class FileReadingCollectorTest extends CrateUnitTest {
     public static void tearDownClass() throws Exception {
         tmpFile.delete();
         tmpFileGz.delete();
+        tmpFileEmptyLine.delete();
     }
 
     @Test
@@ -148,6 +157,12 @@ public class FileReadingCollectorTest extends CrateUnitTest {
     @Test
     public void testDoCollectRawFromCompressed() throws Throwable {
         CollectingProjector projector = getObjects(Paths.get(tmpFileGz.toURI()).toUri().toString(), "gzip");
+        assertCorrectResult(projector.result().get());
+    }
+
+    @Test
+    public void testCollectWithEmptyLine() throws Throwable {
+        CollectingProjector projector = getObjects(Paths.get(tmpFileEmptyLine.toURI()).toUri().toString());
         assertCorrectResult(projector.result().get());
     }
 
